--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -15,6 +15,11 @@
 			<h3>typeahead: simplemode</h3>
 			<input type="text" is="d-typeahead" name="simple" autocomplete="off" min-input-size="3">
 		</div>
+
+		<div>
+			<h3>typeahead: simplemode with data</h3>
+			<input type="text" is="d-typeahead" name="simple" autocomplete="off" min-input-size="3">
+		</div>
 		
 		<div>
 			<h3>typeahead: self-handle-selection</h3>
